@@ -171,7 +171,7 @@ setRlibs <-
 }
 
 ###- The main function for "R CMD check"
-.check_packages <- function(args = NULL)
+.check_packages <- function(args = NULL, no.q = interactive())
 {
     WINDOWS <- .Platform$OS.type == "windows"
     ## this requires on Windows: file.exe (optional)
@@ -240,14 +240,7 @@ setRlibs <-
     }
 
     parse_description_field <- function(desc, field, default=TRUE)
-    {
-        tmp <- desc[field]
-        if (is.na(tmp)) default
-        else switch(tmp,
-                    "yes"=, "Yes" =, "true" =, "True" =, "TRUE" = TRUE,
-                    "no" =, "No" =, "false" =, "False" =, "FALSE" = FALSE,
-                    default)
-    }
+        str_parse_logic(desc[field], default=default)
 
     check_pkg <- function(pkg, pkgname, pkgoutdir, startdir, libdir, desc,
                           is_base_pkg, is_rec_pkg, subdirs, extra_arch)
@@ -4237,7 +4230,12 @@ setRlibs <-
         } else resultLog(Log, "OK")
     }
 
-    do_exit <- function(status = 1L) q("no", status = status, runLast = FALSE)
+    do_exit <-
+	if(no.q)
+	    function(status = 1L) (if(status) stop else message)(
+		".check_packages() exit status ", status)
+	else
+	    function(status = 1L) q("no", status = status, runLast = FALSE)
 
     maybe_exit <- function(status = 1L) {
 	if (R_check_exit_on_first_error) {
@@ -4245,11 +4243,6 @@ setRlibs <-
 	    summaryLog(Log)
 	    do_exit(status)
 	}
-    }
-
-    env_path <- function(...) {
-        paths <- c(...)
-        paste(paths[nzchar(paths)], collapse = .Platform$path.sep)
     }
 
     Usage <- function() {
@@ -4673,7 +4666,7 @@ setRlibs <-
     if (nzchar(libdir)) {
         setwd(libdir)
         libdir <- getwd()
-        Sys.setenv(R_LIBS = env_path(libdir, R_LIBS))
+        Sys.setenv(R_LIBS = path_and_libPath(libdir, R_LIBS))
         setwd(startdir)
     }
 
@@ -4812,9 +4805,9 @@ setRlibs <-
         else if (length(opts) == 1L)
             messageLog(Log, "using option ", sQuote(opts))
 
-        if (!nzchar(libdir)) {
+        if (!nzchar(libdir)) { # otherwise have set R_LIBS above
             libdir <- pkgoutdir
-            Sys.setenv(R_LIBS = env_path(libdir, R_LIBS))
+            Sys.setenv(R_LIBS = path_and_libPath(libdir, R_LIBS))
         }
         if (WINDOWS && grepl(" ", libdir)) # need to avoid spaces in libdir
             libdir <- gsub("\\", "/", utils::shortPathName(libdir), fixed = TRUE)
